# LePREC-Reasoning-as-Classification-over-Structured-Factors-for-Assessing-Relevance-of-Legal-Issues

./: DATA_ACCESS.md  LICENSE  README.md  pyproject.toml  readme.md
src/leprec/: __init__.py  classifier.py  cli.py  evaluation.py  features.py  incremental.py  prompts.py  release_data.py  validation.py
